Доработаны тесты на использование аннотаций @Mock